--- a/src/app/calculation/result-safety-fatigue-moment/result-safety-fatigue-moment.component.html
+++ b/src/app/calculation/result-safety-fatigue-moment/result-safety-fatigue-moment.component.html
@@ -5,25 +5,27 @@
 <div *ngIf="safetyFatigueMomentPages?.length > 0" id="{{page_index}}">
   <div *ngFor="let pages of safetyFatigueMomentPages; index as i" class="sheet-table">
 
-    <div class="cell_title1">{{pages.caption}} (その{{i+1}})</div>
+    <div class="cell_title1">{{pages.caption}} 
+      {{'calculation.sono'| translate }}
+      {{i+1}})</div>
     <div class="cell_title2">[{{pages.g_name}}]</div>
     <table class="main">
       <tr>
-        <th colspan="2" class="cell_name1 g-top2">部材名称</th>
+        <th colspan="2" class="cell_name1 g-top2" translate>calculation.g_name</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.title1.alien}} minwidth g-top2 g-left2">
           {{column.title1.value}}</td>
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">位置</th>
+        <th colspan="2" class="cell_name1" translate>calculation.position</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.title2.alien}} g-left2">
           {{column.title2.value}}</td>
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1 g-bottom2">断面番号</th>
+        <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.section_no</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.title3.alien}} g-bottom2 g-left2">
           {{column.title3.value}}</td>
@@ -63,8 +65,8 @@
       </tr>
       <ng-container *ngIf="pages.SRCFlag">
         <tr>
-          <th rowspan="3" class="cell_name2 g-bottom2">I配置<br>鉄骨</th>
-          <th class="cell_name3 g-left2">引張ﾌﾗﾝｼﾞ</th>
+          <th rowspan="3" class="cell_name2 g-bottom2" translate>calculation.I_steel</th>
+          <th class="cell_name3 g-left2" translate>calculation.t_flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_tension.alien}} g-left2">
@@ -77,7 +79,7 @@
           </ng-container>
         </tr>
         <tr>
-        <th class="cell_name3 g-left2">腹板</th>
+        <th class="cell_name3 g-left2" translate>calculation.sternum</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_web.alien}} g-left2">
@@ -91,7 +93,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th class="cell_name3 g-bottom2 g-left2">圧縮ﾌﾗﾝｼﾞ</th>
+          <th class="cell_name3 g-bottom2 g-left2" translate>calculation.c_flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_compress.alien}} g-bottom2 g-left2">
@@ -104,8 +106,8 @@
           </ng-container>
         </tr>
         <tr>
-          <th rowspan="2" class="cell_name2 g-bottom2">H配置<br>鉄骨</th>
-          <th class="cell_name3 g-left2">ﾌﾗﾝｼﾞ</th>
+          <th rowspan="2" class="cell_name2 g-bottom2" translate>calculation.H_steel</th>
+          <th class="cell_name3 g-left2" translate>calculation.flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_H_tension.alien}} g-left2">
@@ -114,12 +116,13 @@
             <ng-container *ngIf="column.CFTFlag">
               <!--<td class="{{column.steel_I_tension.alien}}" colspan="2">-->
               <td class="center g-left2" colspan="2">
-              厚さ {{column.steel_I_tension.value}} mm</td>
+              {{'calculation.thk'| translate }}
+              {{column.steel_I_tension.value}} mm</td>
             </ng-container>
           </ng-container>
         </tr>
         <tr>
-          <th class="cell_name3 g-bottom2 g-left2">腹板</th>
+          <th class="cell_name3 g-bottom2 g-left2" translate>calculation.sternum</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_H_web.alien}} g-bottom2 g-left2">
@@ -146,7 +149,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">引張鉄筋</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_ten</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.AstString.alien}} g-left2">
           {{column.AstString.value}}</td>
@@ -174,7 +177,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">圧縮鉄筋</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_com</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.AscString.alien}} g-left2">
           {{column.AscString.value}}</td>
@@ -197,7 +200,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">側方鉄筋</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_la</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.AseString.alien}} g-left2">
           {{column.AseString.value}}</td>
@@ -360,7 +363,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">鉄筋補正　αr</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_corr</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.ar.alien}} g-left2">
           {{column.ar.value}}</td>
@@ -368,7 +371,7 @@
       </tr>
       <tr>
         <th class="cell_name2">ΣＮ</th>
-        <th class="cell_name3">(回)</th>
+        <th class="cell_name3" translate>calculation.time</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.N.alien}} g-left2">
           {{column.N.value}}</td>
@@ -403,14 +406,14 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">鉄筋加工補正 r1</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_r1</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.r1.alien}} g-left2">
           {{column.r1.value}}</td>
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">鉄筋加工補正 r2</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_r2</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.r2.alien}} g-left2">
           {{column.r2.value}}</td>
@@ -446,7 +449,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+        <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.result.alien}} g-bottom2 g-left2">
           {{column.result.value}}</td>
@@ -455,6 +458,7 @@
     </table>
   </div>
 
+<!--翻訳保留-->
   <ng-container *ngIf="isSRC">
     <div class="sheet">
       <div class="sheet-title">
@@ -612,27 +616,30 @@
         </div>
       </div>
     </div>
+<!--翻訳保留ここまで-->
 
     <div *ngFor="let pages of safetyFatigueMomentPages; index as i" class="sheet-table">
-      <div class="cell_title1">{{pages.caption}} (その{{i+1}})</div>
+      <div class="cell_title1">{{pages.caption}} 
+        {{'calculation.sono'| translate }}
+        {{i+1}})</div>
       <div class="cell_title2">[{{pages.g_name}}]</div>
       <table class="main">
         <tr>
-          <th colspan="2" class="cell_name1 g-top2">部材名称</th>
+          <th colspan="2" class="cell_name1 g-top2" translate>calculation.g_name</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title1.alien}} minwidth g-top2 g-left2">
             {{column.title1.value}}</td>
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">位置</th>
+          <th colspan="2" class="cell_name1" translate>calculation.position</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title2.alien}} g-left2">
             {{column.title2.value}}</td>
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">断面番号</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.section_no</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title3.alien}} g-bottom2 g-left2">
             {{column.title3.value}}</td>
@@ -671,8 +678,8 @@
           </ng-container>
         </tr>
         <tr>
-          <th rowspan="3" class="cell_name2 g-bottom2">I配置<br>鉄骨</th>
-          <th class="cell_name3 g-left2">引張ﾌﾗﾝｼﾞ</th>
+          <th rowspan="3" class="cell_name2 g-bottom2" translate>calculation.I_steel</th>
+          <th class="cell_name3 g-left2" translate>calculation.t_flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_tension.alien}} g-left2">
@@ -685,7 +692,7 @@
           </ng-container>
         </tr>
         <tr>
-        <th class="cell_name3 g-left2">腹板</th>
+        <th class="cell_name3 g-left2" translate>calculation.sternum</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_web.alien}} g-left2">
@@ -699,7 +706,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th class="cell_name3 g-bottom2 g-left2">圧縮ﾌﾗﾝｼﾞ</th>
+          <th class="cell_name3 g-bottom2 g-left2" translate>calculation.c_flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_compress.alien}} g-bottom2 g-left2">
@@ -712,8 +719,8 @@
           </ng-container>
         </tr>
         <tr>
-          <th rowspan="2" class="cell_name2 g-bottom2">H配置<br>鉄骨</th>
-          <th class="cell_name3 g-left2">ﾌﾗﾝｼﾞ</th>
+          <th rowspan="2" class="cell_name2 g-bottom2" translate>calculation.H_steel</th>
+          <th class="cell_name3 g-left2" translate>calculation.flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_H_tension.alien}} g-left2">
@@ -722,12 +729,13 @@
             <ng-container *ngIf="column.CFTFlag">
               <!--<td class="{{column.steel_I_tension.alien}}" colspan="2">-->
               <td class="center" colspan="2">
-              厚さ {{column.steel_I_tension.value}} mm</td>
+              {{'calculation.thk'| translate }}
+              {{column.steel_I_tension.value}} mm</td>
             </ng-container>
           </ng-container>
         </tr>
         <tr>
-          <th class="cell_name3 g-bottom2 g-left2">腹板</th>
+          <th class="cell_name3 g-bottom2 g-left2" translate>calculation.sternum</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_H_web.alien}} g-bottom2 g-left2">
@@ -753,7 +761,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">引張鉄筋</th>
+          <th colspan="2" class="cell_name1" translate>calculation.rb_ten</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AstString.alien}} g-left2">
             {{column.AstString.value}}</td>
@@ -781,7 +789,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">圧縮鉄筋</th>
+          <th colspan="2" class="cell_name1" translate>calculation.rb_com</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AscString.alien}} g-left2">
             {{column.AscString.value}}</td>
@@ -804,7 +812,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">側方鉄筋</th>
+          <th colspan="2" class="cell_name1" translate>calculation.rb_la</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AseString.alien}} g-left2">
             {{column.AseString.value}}</td>
@@ -935,14 +943,14 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">継手種類</th>
+          <th colspan="2" class="cell_name1" translate>calculation.fit_typ</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.welding_joint.alien}} g-left2">
             {{column.welding_joint.value}}</td>
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">強度等級</th>
+          <th colspan="2" class="cell_name1" translate>calculation.str_grade</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.class_s.alien}} g-left2">
             {{column.class_s.value}}</td>
@@ -1000,7 +1008,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.result_s.alien}} g-bottom2 g-left2">
             {{column.result_s.value}}</td>
