--- a/src/app/calculation/result-safety-torsional-moment/result-safety-torsional-moment.component.html
+++ b/src/app/calculation/result-safety-torsional-moment/result-safety-torsional-moment.component.html
@@ -7,25 +7,27 @@
 
     <div class="sheet-table">
       <!-- 1ページ目 -->
-      <div class="cell_title1">{{pages.caption}} (その{{i*2+1}})</div>
+      <div class="cell_title1">{{pages.caption}} 
+        {{'calculation.sono'| translate }}
+        {{i*2+1}})</div>
       <div class="cell_title2">[{{pages.g_name}}]</div>
       <table class="main">
         <tr>
-          <th colspan="2" class="cell_name1 g-top2">部材名称</th>
+          <th colspan="2" class="cell_name1 g-top2" translate>calculation.g_name</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title1.alien}} minwidth g-top2 g-left2">
               {{column.title1.value}}</td>
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">位置</th>
+          <th colspan="2" class="cell_name1" translate>calculation.position</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title2.alien}} g-left2">
               {{column.title2.value}}</td>
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">断面番号</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.section_no</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title3.alien}} g-bottom2 g-left2">
               {{column.title3.value}}</td>
@@ -50,8 +52,8 @@
 
         <ng-container *ngIf="pages.SRCFlag">
           <tr>
-            <th rowspan="3" class="cell_name2 g-bottom2">I配置<br>鉄骨</th>
-            <th class="cell_name3 g-left2">引張ﾌﾗﾝｼﾞ</th>
+            <th rowspan="3" class="cell_name2 g-bottom2" translate>calculation.I_steel</th>
+            <th class="cell_name3 g-left2" translate>calculation.t_flange</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_I_tension.alien}} g-left2">
@@ -64,7 +66,7 @@
             </ng-container>
           </tr>
           <tr>
-            <th class="cell_name3 g-left2">腹板</th>
+            <th class="cell_name3 g-left2" translate>calculation.sternum</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_I_web.alien}} g-left2">
@@ -77,7 +79,7 @@
             </ng-container>
           </tr>
           <tr>
-            <th class="cell_name3 g-bottom2 g-left2">圧縮ﾌﾗﾝｼﾞ</th>
+            <th class="cell_name3 g-bottom2 g-left2" translate>calculation.c_flange</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_I_compress.alien}} g-bottom2 g-left2">
@@ -90,8 +92,8 @@
             </ng-container>
           </tr>
           <tr>
-            <th rowspan="2" class="cell_name2 g-bottom2">H配置<br>鉄骨</th>
-            <th class="cell_name3 g-left2">ﾌﾗﾝｼﾞ</th>
+            <th rowspan="2" class="cell_name2 g-bottom2" translate>calculation.H_steel</th>
+            <th class="cell_name3 g-left2" translate>calculation.flange</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_H_tension.alien}} g-left2">
@@ -100,12 +102,13 @@
               <ng-container *ngIf="column.CFTFlag">
                 <!--<td class="{{column.steel_I_tension.alien}} g-left2" colspan="2">-->
                 <td class="center g-left2" colspan="2">
-                  厚さ {{column.steel_I_tension.value}} mm</td>
+                  {{'calculation.thk'| translate }}
+                  {{column.steel_I_tension.value}} mm</td>
               </ng-container>
             </ng-container>
           </tr>
           <tr>
-            <th class="cell_name3 g-bottom2 g-left2">腹板</th>
+            <th class="cell_name3 g-bottom2 g-left2" translate>calculation.sternum</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_H_web.alien}} g-bottom2 g-left2">
@@ -132,7 +135,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">引張鉄筋</th>
+          <th colspan="2" class="cell_name1" translate>calculation.rb_ten</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AstString.alien}} g-left2">
               {{column.AstString.value}}</td>
@@ -160,7 +163,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">圧縮鉄筋</th>
+          <th colspan="2" class="cell_name1" translate>calculation.rb_com</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AscString.alien}} g-left2">
               {{column.AscString.value}}</td>
@@ -175,7 +178,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">側方鉄筋 Ase</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.Ase</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AseString.alien}} g-left2 g-bottom2">
               {{column.AseString.value}}</td>
@@ -289,7 +292,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">スターラップ</th>
+          <th colspan="2" class="cell_name1"translate>calculation.stirrup</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.bendFlag">
               <td colspan="2" class="{{column.AwString.alien}} g-left2">{{column.AwString.value}}</td>
@@ -582,7 +585,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.Mtcd_Result.alien}} g-bottom2 g-left2">{{column.Mtcd_Result.value}}</td>
           </ng-container>
@@ -592,25 +595,27 @@
 
     <div class="sheet-table">
       <!-- 2ページ目 -->
-      <div class="cell_title1">{{pages.caption}} (その{{i*2+2}})</div>
+      <div class="cell_title1">{{pages.caption}} 
+        {{'calculation.sono'| translate }}
+        {{i*2+2}})</div>
       <div class="cell_title2">[{{pages.g_name}}]</div>
       <table class="main">
         <tr>
-          <th colspan="2" class="cell_name1 g-top2">部材名称</th>
+          <th colspan="2" class="cell_name1 g-top2" translate>calculation.g_name</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title1.alien}} minwidth g-top2 g-left2">
               {{column.title1.value}}</td>
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">位置</th>
+          <th colspan="2" class="cell_name1" translate>calculation.position</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title2.alien}} g-left2">
               {{column.title2.value}}</td>
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">断面番号</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.section_no</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.title3.alien}} g-bottom2 g-left2">
               {{column.title3.value}}</td>
@@ -642,8 +647,8 @@
         </tr> -->
         <ng-container *ngIf="pages.SRCFlag">
           <tr>
-            <th rowspan="3" class="cell_name2   g-bottom2">I配置<br>鉄骨</th>
-            <th class="cell_name3 g-left2">引張ﾌﾗﾝｼﾞ</th>
+            <th rowspan="3" class="cell_name2   g-bottom2" translate>calculation.I_steel</th>
+            <th class="cell_name3 g-left2" translate>calculation.t_flange</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_I_tension.alien}} g-left2">
@@ -656,7 +661,7 @@
             </ng-container>
           </tr>
           <tr>
-            <th class="cell_name3 g-left2">腹板</th>
+            <th class="cell_name3 g-left2"  translate>calculation.sternum</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_I_web.alien}} g-left2">
@@ -669,7 +674,7 @@
             </ng-container>
           </tr>
           <tr>
-            <th class="cell_name3 g-bottom2 g-left2">圧縮ﾌﾗﾝｼﾞ</th>
+            <th class="cell_name3 g-bottom2 g-left2"  translate>calculation.c_flange</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_I_compress.alien}} g-bottom2 g-left2">
@@ -682,8 +687,8 @@
             </ng-container>
           </tr>
           <tr>
-            <th rowspan="2" class="cell_name2 g-bottom2">H配置<br>鉄骨</th>
-            <th class="cell_name3 g-left2">ﾌﾗﾝｼﾞ</th>
+            <th rowspan="2" class="cell_name2 g-bottom2" translate>calculation.H_steel</th>
+            <th class="cell_name3 g-left2" translate>calculation.flange</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_H_tension.alien}} g-left2">
@@ -692,12 +697,13 @@
               <ng-container *ngIf="column.CFTFlag">
                 <!--<td class="{{column.steel_I_tension.alien}} g-left2" colspan="2">-->
                 <td class="center g-left2" colspan="2">
-                  厚さ {{column.steel_I_tension.value}} mm</td>
+                  {{'calculation.thk'| translate }}
+                  {{column.steel_I_tension.value}} mm</td>
               </ng-container>
             </ng-container>
           </tr>
           <tr>
-            <th class="cell_name3 g-bottom2 g-left2">腹板</th>
+            <th class="cell_name3 g-bottom2 g-left2" translate>calculation.sternum</th>
             <ng-container *ngFor="let column of pages.columns; index as c">
               <ng-container *ngIf="!column.CFTFlag">
                 <td colspan="2" class="{{column.steel_H_web.alien}} g-bottom2 g-left2">
@@ -724,7 +730,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">引張鉄筋</th>
+          <th colspan="2" class="cell_name1" translate>calculation.rb_ten</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AstString.alien}} g-left2">
               {{column.AstString.value}}</td>
@@ -752,7 +758,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1">圧縮鉄筋</th>
+          <th colspan="2" class="cell_name1" translate>calculation.rb_com</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AscString.alien}} g-left2">
               {{column.AscString.value}}</td>
@@ -767,7 +773,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">側方鉄筋 Ase</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.Ase</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.AseString.alien}} g-bottom2 g-left2">
               {{column.AseString.value}}</td>
@@ -908,7 +914,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.Mtud1_Result.alien}} g-bottom2 g-left2">{{column.Mtud1_Result.value}}</td>
           </ng-container>
@@ -928,7 +934,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.Mtud2_Result.alien}} g-bottom2 g-left2">{{column.Mtud2_Result.value}}</td>
           </ng-container>
@@ -1056,7 +1062,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.Mtud3_Result.alien}} g-bottom2 g-left2">{{column.Mtud3_Result.value}}</td>
           </ng-container>
@@ -1076,7 +1082,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+          <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.Mtud4_Result.alien}} g-bottom2 g-left2">{{column.Mtud4_Result.value}}</td>
           </ng-container>
