--- a/src/app/calculation/result-serviceability-moment/result-serviceability-moment.component.html
+++ b/src/app/calculation/result-serviceability-moment/result-serviceability-moment.component.html
@@ -4,25 +4,27 @@
 
 <div *ngIf="serviceabilityMomentPages?.length > 0" id="{{page_index}}">
   <div *ngFor="let pages of serviceabilityMomentPages; index as i" class="sheet-table">
-    <div class="cell_title1">{{pages.caption}} (その{{i+1}})</div>
+    <div class="cell_title1">{{pages.caption}} 
+      {{'calculation.sono'| translate }}
+      {{i+1}})</div>
     <div class="cell_title2">[{{pages.g_name}}]</div>
     <table class="main">
       <tr>
-        <th colspan="2" class="cell_name1 g-top2">部材名称</th>
+        <th colspan="2" class="cell_name1 g-top2" translate>calculation.g_name</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.title1.alien}} minwidth g-top2 g-left2">
           {{column.title1.value}}</td>
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">位置</th>
+        <th colspan="2" class="cell_name1" translate>calculation.position</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.title2.alien}} g-left2">
           {{column.title2.value}}</td>
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1 g-bottom2">断面番号</th>
+        <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.section_no</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.title3.alien}} g-bottom2 g-left2">
           {{column.title3.value}}</td>
@@ -62,8 +64,8 @@
       </tr>
       <ng-container *ngIf="pages.SRCFlag">
         <tr>
-          <th rowspan="3" class="cell_name2 g-bottom2">I配置<br>鉄骨</th>
-          <th class="cell_name3 g-left2">引張ﾌﾗﾝｼﾞ</th>
+          <th rowspan="3" class="cell_name2 g-bottom2" translate>calculation.I_steel</th>
+          <th class="cell_name3 g-left2" translate>calculation.t_flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_tension.alien}} g-left2">
@@ -76,7 +78,7 @@
           </ng-container>
         </tr>
         <tr>
-        <th class="cell_name3 g-left2">腹板</th>
+        <th class="cell_name3 g-left2" translate>calculation.sternum</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_web.alien}} g-left2">
@@ -90,7 +92,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th class="cell_name3 g-bottom2 g-left2">圧縮ﾌﾗﾝｼﾞ</th>
+          <th class="cell_name3 g-bottom2 g-left2" translate>calculation.c_flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_I_compress.alien}} g-bottom2 g-left2">
@@ -103,8 +105,8 @@
           </ng-container>
         </tr>
         <tr>
-          <th rowspan="2" class="cell_name2 g-bottom2">H配置<br>鉄骨</th>
-          <th class="cell_name3 g-left2">ﾌﾗﾝｼﾞ</th>
+          <th rowspan="2" class="cell_name2 g-bottom2" translate>calculation.H_steel</th>
+          <th class="cell_name3 g-left2" translate>calculation.flange</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_H_tension.alien}} g-left2">
@@ -113,12 +115,13 @@
             <ng-container *ngIf="column.CFTFlag">
               <!--<td class="{{column.steel_I_tension.alien}} g-left2" colspan="2">-->
               <td class="center" colspan="2">
-              厚さ {{column.steel_I_tension.value}} mm</td>
+                {{'calculation.thk'| translate }}
+                {{column.steel_I_tension.value}} mm</td>
             </ng-container>
           </ng-container>
         </tr>
         <tr>
-          <th class="cell_name3 g-bottom2 g-left2">腹板</th>
+          <th class="cell_name3 g-bottom2 g-left2" translate>calculation.sternum</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <ng-container *ngIf="!column.CFTFlag">
               <td colspan="2" class="{{column.steel_H_web.alien}} g-bottom2 g-left2">
@@ -145,7 +148,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">引張鉄筋</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_ten</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.AstString.alien}} g-left2">
           {{column.AstString.value}}</td>
@@ -173,7 +176,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">圧縮鉄筋</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_com</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.AscString.alien}} g-left2">
           {{column.AscString.value}}</td>
@@ -196,7 +199,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">側方鉄筋</th>
+        <th colspan="2" class="cell_name1" translate>calculation.rb_la</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.AseString.alien}} g-left2">
           {{column.AseString.value}}</td>
@@ -281,7 +284,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1 g-bottom2">環境条件</th>
+        <th colspan="2" class="cell_name1 g-bottom2"  translate>calculation.env</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.con.alien}} g-bottom2 g-left2">
           {{column.con.value}}</td>
@@ -504,7 +507,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1 g-bottom2">照査結果</th>
+        <th colspan="2" class="cell_name1 g-bottom2" translate>calculation.vrfy_rslt</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.result.alien}} g-bottom2 g-left2">
           {{column.result.value}}</td>
